--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^3.0.0",
     "@vinejs/vine": "^2.1.0",
+    "aos": "^2.3.4",
     "edge.js": "^6.0.2",
     "luxon": "^3.4.4",
     "mysql2": "^3.10.0",
